wrap policy in textarea for copying as per issue #4

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,3 +89,8 @@ hr {
   vertical-align: middle;
   margin:0;
 }
+
+#copyablePolicy {
+  width:100%;
+  height:750px;
+}
